vlib/v/checker/tests/use_non-public_methods_outside_the_builtin_module.vv
module main

fn main() {
	mp := map{'key': 'value'}
	println(mp.exists_1('key'))
}
